--- a/nft-mini-launchpad/.env.example
+++ b/nft-mini-launchpad/.env.example
@@ -3,3 +3,4 @@ REACT_APP_CANDY_MACHINE_ID=H3VAkPcCqnYevVpKd7RSVx9QuNFhxtS93kM5XnjyP5KR
 REACT_APP_SOLANA_NETWORK=devnet
 REACT_APP_SOLANA_RPC_HOST=https://metaplex.devnet.rpcpool.com/
 SKIP_PREFLIGHT_CHECK=true
+NODE_OPTIONS=--openssl-legacy-provider
