--- a/nft-mini-launchpad/.env.example
+++ b/nft-mini-launchpad/.env.example
@@ -1,6 +1,5 @@
 REACT_APP_CANDY_MACHINE_ID=H3VAkPcCqnYevVpKd7RSVx9QuNFhxtS93kM5XnjyP5KR
 
 REACT_APP_SOLANA_NETWORK=devnet
-REACT_APP_SOLANA_RPC_HOST=https://solana-devnet.g.alchemy.com/v2/kcMbXYo0Lv7aX5jz_lS8om00B5jF9FIW
+REACT_APP_SOLANA_RPC_HOST=https://api.devnet.solana.com
 SKIP_PREFLIGHT_CHECK=true
-NODE_OPTIONS=--openssl-legacy-provider
